--- a/src/components/bottles/bottles.css
+++ b/src/components/bottles/bottles.css
@@ -25,3 +25,21 @@
 .btn{
     margin-top: 20px;
 }
+.cart_container{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.cartImage{
+    height: 200px;
+    width: 200px;
+}
+.imageContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
